--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 title: MyHomePage
 description: For daily notes
