--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,10 +20,10 @@ title                    : "My Home Pages"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "zzblydia"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "some detailed, authentic, not necessarily interesting notes"
+url                      : https://zzblydia.github.io/myBlog/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : zzblydia/myBolg # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -287,3 +287,5 @@ defaults:
       comments: # true
       share: true
       related: true
+      show_date: true
+      date_format: "%Y-%m-%d"
