--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -104,7 +104,7 @@ author:
   name             : "zzblydia"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "not clever and love coding"
-  location         : "HK"
+  location         : "NanJing"
   email            :
   links:
     - label: "Email"
