--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "zzblydia"
 description              : "some detailed, authentic, not necessarily interesting notes"
-url                      : https://zzblydia.github.io/myBlog/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : https://zzblydia.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : /myBlog # the subpath of your site, e.g. "/blog"
 repository               : zzblydia/myBolg # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -285,7 +285,14 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
-      share: true
       related: true
       show_date: true
       date_format: "%Y-%m-%d"
+      
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
