--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
+  - title: "Categories"
+    url: /categories/
+  - title: "About"
+    url: about
+  - title: "theme"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
