增加调试日志功能功能, file:cout和file:fout定义在debug.h中, 实现在debug.cpp中, file:cout和file:fout的用法和std::cout相似, file:cout同时打印到屏幕和文件, file:fout只打印到文件.

--- a/clion_comp282/task-3/CMakeLists.txt
+++ b/clion_comp282/task-3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(comp282)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(comp282 AdventureGame.cpp Item.cpp Character.cpp Location.cpp)
+add_executable(comp282 AdventureGame.cpp Item.cpp Character.cpp Location.cpp debug.cpp)
