--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,9 +2,11 @@
 main:
   - title: "Categories"
     url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: about
-  - title: "theme"
+  - title: "Theme"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "Sample Posts"
   #   url: /year-archive/
