--- a/ws-client-send-recv-tls/CMakeLists.txt
+++ b/ws-client-send-recv-tls/CMakeLists.txt
@@ -1,12 +1,12 @@
-project(ws-server C)
+project(ws-client C)
 cmake_minimum_required(VERSION 2.8.12)
 find_package(libwebsockets CONFIG REQUIRED)
 list(APPEND CMAKE_MODULE_PATH ${LWS_CMAKE_DIR})
 include(CheckCSourceCompiles)
 include(LwsCheckRequirements)
 
-set(SAMP ws-server-asr)
-set(SRCS ws-server-framework.c ws-tools.c)
+set(SAMP ws-client-send-recv-tls)
+set(SRCS ws-client-send-recv-tls.c ws-tools.c)
 
 set(requirements 1)
 require_lws_config(LWS_ROLE_WS 1 requirements)
