--- a/c&&c++/socket/socket_01_linux/CMakeLists.txt
+++ b/c&&c++/socket/socket_01_linux/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(socket_client socket_client.c)
 add_executable(socket_server socket_server.c)
+add_executable(socket_server_mutile socket_server_mutile.c)
